@@ -302,7 +302,7 @@ config:
       AgentNameVersion                     : 'Voordeel 1.3.0'
       AgentNameVersionMajor                : 'Voordeel 1'
       AgentLanguage                        : 'Dutch (Netherlands)'
-      AgentLanguageCode                    : 'nl_nl'
+      AgentLanguageCode                    : 'nl-nl'
 
 - test:
     input:
@@ -812,7 +812,7 @@ config:
       AgentNameVersion                     : 'Airmail 1.3.3'
       AgentNameVersionMajor                : 'Airmail 1'
       AgentLanguage                        : 'Dutch (Netherlands)'
-      AgentLanguageCode                    : 'nl_nl'
+      AgentLanguageCode                    : 'nl-nl'
 
 - test:
     input:
