@@ -117,7 +117,7 @@ config:
       AgentNameVersionMajor                : 'UIWebView ??'
       AgentBuild                           : '4100.0'
       AgentLanguage                        : 'English (United States)'
-      AgentLanguageCode                    : 'ru_ru'
+      AgentLanguageCode                    : 'en-us'
       AgentSecurity                        : 'Strong security'
       FacebookFBSS                         : '2'
       FacebookOperatingSystemName          : 'iPhone OS'
@@ -277,6 +277,7 @@ config:
       AgentNameVersionMajor                : 'UIWebView 600'
       AgentBuild                           : '8291884'
       AgentLanguage                        : 'English (United States)'
+      AgentLanguageCode                    : 'en-us'
       FacebookCarrier                      : 'vodafoneIE'
       FacebookDeviceClass                  : 'phone'
       FacebookDeviceName                   : 'iPhone'
