@@ -395,3 +395,5 @@ config:
       AgentVersionMajor                    : '6'
       AgentNameVersion                     : 'WeChat 6.5.4.1000'
       AgentNameVersionMajor                : 'WeChat 6'
+      AgentLanguage                        : 'Chinese (S)'
+      AgentLanguageCode                    : 'zh-cn'
