@@ -248,5 +248,5 @@ config:
       AgentNameVersion                     : 'com.google.ios.youtube 2.6.0.11251'
       AgentNameVersionMajor                : 'com.google.ios.youtube 2'
       AgentLanguage                        : 'Dutch (Netherlands)'
-      AgentLanguageCode                    : 'nl_nl'
+      AgentLanguageCode                    : 'nl-nl'
       AgentSecurity                        : 'Strong security'
