@@ -157,10 +157,12 @@ config:
 - matcher:
     extract:
     - 'AgentLanguage: 3001:LookUp[ISOLanguageCodesName;agent.product.(1-2)comments.entry.(1)product.(1)name="FBLC"^.version]'
+    - 'AgentLanguageCode: 3001:LookUp[ISOLanguageCodes;agent.product.(1-2)comments.entry.(1)product.(1)name="FBLC"^.version]'
 
 - matcher:
     extract:
     - 'AgentLanguage: 3000:agent.product.(1-2)comments.entry.(1)product.(1)name="FBLC"^.version'
+    - 'AgentLanguageCode: 3000:agent.product.(1-2)comments.entry.(1)product.(1)name="FBLC"^.version'
 
 - matcher:
     extract:
@@ -198,6 +200,7 @@ config:
       AgentNameVersionMajor                : 'UIWebView 600'
       AgentBuild                           : '8291884'
       AgentLanguage                        : 'Dutch (Netherlands)'
+      AgentLanguageCode                    : 'nl-nl'
       FacebookDeviceClass                  : 'tablet'
       FacebookDeviceName                   : 'iPad'
       FacebookDeviceVersion                : 'iPad4,1'
@@ -237,6 +240,7 @@ config:
       AgentNameVersionMajor                : 'UIWebView 600'
       AgentBuild                           : '7806348'
       AgentLanguage                        : 'Dutch (Netherlands)'
+      AgentLanguageCode                    : 'nl-nl'
       FacebookCarrier                      : 'TelfortNL'
       FacebookDeviceClass                  : 'tablet'
       FacebookDeviceName                   : 'iPad'
@@ -396,6 +400,7 @@ config:
       AgentNameVersionMajor                : 'UIWebView ??'
       AgentBuild                           : '23973043'
       AgentLanguage                        : 'Dutch (Netherlands)'
+      AgentLanguageCode                    : 'nl-nl'
       FacebookDeviceClass                  : 'tablet'
       FacebookDeviceName                   : 'iPad'
       FacebookDeviceVersion                : 'iPad4,4'
@@ -435,6 +440,7 @@ config:
       AgentNameVersionMajor                : 'UIWebView 601'
       AgentBuild                           : '31011105'
       AgentLanguage                        : 'Dutch (Netherlands)'
+      AgentLanguageCode                    : 'nl-nl'
       FacebookCarrier                      : 'OrangeB'
       FacebookDeviceClass                  : 'phone'
       FacebookDeviceName                   : 'iPhone'
