@@ -35,6 +35,11 @@ config:
     - 'AgentLanguageCode :  5:LookUp[ISOLanguageCodes;agent.(1-2)product.(2)comments.(1-5)entry.(1-2)text]'
     - 'AgentLanguage     :  5:LookUp[ISOLanguageCodesName;agent.(1-2)product.(2)comments.(1-5)entry.(1-2)text]'
 
+- matcher:
+    extract:
+    - 'AgentLanguageCode :  5:LookUp[ISOLanguageCodes;agent.product.name="Language"^.version]'
+    - 'AgentLanguage     :  5:LookUp[ISOLanguageCodesName;agent.product.name="Language"^.version]'
+
 # Match the 3 variants:
 - matcher:
     extract:
@@ -51,405 +56,410 @@ config:
     - 'AgentLanguageCode :  4:LookUp[ISOLanguageCodes3;agent.(1-2)product.(2)comments.(1-5)entry.(1-2)text]'
     - 'AgentLanguage     :  4:LookUp[ISOLanguageCodes3Name;agent.(1-2)product.(2)comments.(1-5)entry.(1-2)text]'
 
+- matcher:
+    extract:
+    - 'AgentLanguageCode :  5:LookUp[ISOLanguageCodes3;agent.product.name="Language"^.version]'
+    - 'AgentLanguage     :  5:LookUp[ISOLanguageCodes3Name;agent.product.name="Language"^.version]'
+
 # -----------------------------------------------------------------------------
 - lookup:
     name: 'ISOLanguageCodes'
     map:
       "af" : "af"
-      "af_za" : "af_za"
+      "af_za" : "af-za"
       "af-za" : "af-za"
-      "ar_ae" : "ar_ae"
+      "ar_ae" : "ar-ae"
       "ar-ae" : "ar-ae"
       "ar" : "ar"
-      "ar_bh" : "ar_bh"
+      "ar_bh" : "ar-bh"
       "ar-bh" : "ar-bh"
-      "ar_dz" : "ar_dz"
+      "ar_dz" : "ar-dz"
       "ar-dz" : "ar-dz"
-      "ar_eg" : "ar_eg"
+      "ar_eg" : "ar-eg"
       "ar-eg" : "ar-eg"
-      "ar_iq" : "ar_iq"
+      "ar_iq" : "ar-iq"
       "ar-iq" : "ar-iq"
-      "ar_jo" : "ar_jo"
+      "ar_jo" : "ar-jo"
       "ar-jo" : "ar-jo"
-      "ar_kw" : "ar_kw"
+      "ar_kw" : "ar-kw"
       "ar-kw" : "ar-kw"
-      "ar_lb" : "ar_lb"
+      "ar_lb" : "ar-lb"
       "ar-lb" : "ar-lb"
-      "ar_ly" : "ar_ly"
+      "ar_ly" : "ar-ly"
       "ar-ly" : "ar-ly"
-      "ar_ma" : "ar_ma"
+      "ar_ma" : "ar-ma"
       "ar-ma" : "ar-ma"
-      "ar_om" : "ar_om"
+      "ar_om" : "ar-om"
       "ar-om" : "ar-om"
-      "ar_qa" : "ar_qa"
+      "ar_qa" : "ar-qa"
       "ar-qa" : "ar-qa"
-      "ar_sa" : "ar_sa"
+      "ar_sa" : "ar-sa"
       "ar-sa" : "ar-sa"
-      "ar_sy" : "ar_sy"
+      "ar_sy" : "ar-sy"
       "ar-sy" : "ar-sy"
-      "ar_tn" : "ar_tn"
+      "ar_tn" : "ar-tn"
       "ar-tn" : "ar-tn"
-      "ar_ye" : "ar_ye"
+      "ar_ye" : "ar-ye"
       "ar-ye" : "ar-ye"
-      "az_az" : "az_az"
+      "az_az" : "az-az"
       "az-az" : "az-az"
-      "az_az" : "az_az"
+      "az_az" : "az-az"
       "az-az" : "az-az"
       "az" : "az"
       "be" : "be"
-      "be_by" : "be_by"
+      "be_by" : "be-by"
       "be-by" : "be-by"
-      "bg_bg" : "bg_bg"
+      "bg_bg" : "bg-bg"
       "bg-bg" : "bg-bg"
       "bg" : "bg"
-      "bs_ba" : "bs_ba"
+      "bs_ba" : "bs-ba"
       "bs-ba" : "bs-ba"
       "ca" : "ca"
-      "ca_es" : "ca_es"
+      "ca_es" : "ca-es"
       "ca-es" : "ca-es"
-      "cs_cz" : "cs_cz"
+      "cs_cz" : "cs-cz"
       "cs-cz" : "cs-cz"
       "cs" : "cs"
-      "cy_gb" : "cy_gb"
+      "cy_gb" : "cy-gb"
       "cy-gb" : "cy-gb"
       "cy" : "cy"
       "da" : "da"
-      "da_dk" : "da_dk"
+      "da_dk" : "da-dk"
       "da-dk" : "da-dk"
-      "de_at" : "de_at"
+      "de_at" : "de-at"
       "de-at" : "de-at"
-      "de_ch" : "de_ch"
+      "de_ch" : "de-ch"
       "de-ch" : "de-ch"
-      "de_de" : "de_de"
+      "de_de" : "de-de"
       "de-de" : "de-de"
       "de" : "de"
-      "de_li" : "de_li"
+      "de_li" : "de-li"
       "de-li" : "de-li"
-      "de_lu" : "de_lu"
+      "de_lu" : "de-lu"
       "de-lu" : "de-lu"
       "dv" : "dv"
-      "dv_mv" : "dv_mv"
+      "dv_mv" : "dv-mv"
       "dv-mv" : "dv-mv"
       "el" : "el"
-      "el_gr" : "el_gr"
+      "el_gr" : "el-gr"
       "el-gr" : "el-gr"
-      "en_au" : "en_au"
+      "en_au" : "en-au"
       "en-au" : "en-au"
-      "en_bz" : "en_bz"
+      "en_bz" : "en-bz"
       "en-bz" : "en-bz"
-      "en_ca" : "en_ca"
+      "en_ca" : "en-ca"
       "en-ca" : "en-ca"
-      "en_cb" : "en_cb"
+      "en_cb" : "en-cb"
       "en-cb" : "en-cb"
       "en" : "en"
-      "en_gb" : "en_gb"
+      "en_gb" : "en-gb"
       "en-gb" : "en-gb"
-      "en_ie" : "en_ie"
+      "en_ie" : "en-ie"
       "en-ie" : "en-ie"
-      "en_jm" : "en_jm"
+      "en_jm" : "en-jm"
       "en-jm" : "en-jm"
-      "en_nz" : "en_nz"
+      "en_nz" : "en-nz"
       "en-nz" : "en-nz"
-      "en_ph" : "en_ph"
+      "en_ph" : "en-ph"
       "en-ph" : "en-ph"
-      "en_tt" : "en_tt"
+      "en_tt" : "en-tt"
       "en-tt" : "en-tt"
-      "en_us" : "en_us"
+      "en_us" : "en-us"
       "en-us" : "en-us"
-      "en_za" : "en_za"
+      "en_za" : "en-za"
       "en-za" : "en-za"
-      "en_zw" : "en_zw"
+      "en_zw" : "en-zw"
       "en-zw" : "en-zw"
       "eo" : "eo"
-      "es_ar" : "es_ar"
+      "es_ar" : "es-ar"
       "es-ar" : "es-ar"
-      "es_bo" : "es_bo"
+      "es_bo" : "es-bo"
       "es-bo" : "es-bo"
-      "es_cl" : "es_cl"
+      "es_cl" : "es-cl"
       "es-cl" : "es-cl"
-      "es_co" : "es_co"
+      "es_co" : "es-co"
       "es-co" : "es-co"
-      "es_cr" : "es_cr"
+      "es_cr" : "es-cr"
       "es-cr" : "es-cr"
-      "es_do" : "es_do"
+      "es_do" : "es-do"
       "es-do" : "es-do"
-      "es_ec" : "es_ec"
+      "es_ec" : "es-ec"
       "es-ec" : "es-ec"
-      "es_es" : "es_es"
+      "es_es" : "es-es"
       "es-es" : "es-es"
-      "es_gt" : "es_gt"
+      "es_gt" : "es-gt"
       "es-gt" : "es-gt"
-      "es_hn" : "es_hn"
+      "es_hn" : "es-hn"
       "es-hn" : "es-hn"
-      "es_mx" : "es_mx"
+      "es_mx" : "es-mx"
       "es-mx" : "es-mx"
-      "es_ni" : "es_ni"
+      "es_ni" : "es-ni"
       "es-ni" : "es-ni"
-      "es_pa" : "es_pa"
+      "es_pa" : "es-pa"
       "es-pa" : "es-pa"
-      "es_pe" : "es_pe"
+      "es_pe" : "es-pe"
       "es-pe" : "es-pe"
-      "es_pr" : "es_pr"
+      "es_pr" : "es-pr"
       "es-pr" : "es-pr"
-      "es_py" : "es_py"
+      "es_py" : "es-py"
       "es-py" : "es-py"
       "es" : "es"
-      "es_sv" : "es_sv"
+      "es_sv" : "es-sv"
       "es-sv" : "es-sv"
-      "es_uy" : "es_uy"
+      "es_uy" : "es-uy"
       "es-uy" : "es-uy"
-      "es_ve" : "es_ve"
+      "es_ve" : "es-ve"
       "es-ve" : "es-ve"
-      "et_ee" : "et_ee"
+      "et_ee" : "et-ee"
       "et-ee" : "et-ee"
       "et" : "et"
       "eu" : "eu"
-      "eu_es" : "eu_es"
+      "eu_es" : "eu-es"
       "eu-es" : "eu-es"
       "fa" : "fa"
-      "fa_ir" : "fa_ir"
+      "fa_ir" : "fa-ir"
       "fa-ir" : "fa-ir"
-      "fi_fi" : "fi_fi"
+      "fi_fi" : "fi-fi"
       "fi-fi" : "fi-fi"
       "fi" : "fi"
       "fo" : "fo"
-      "fo_fo" : "fo_fo"
+      "fo_fo" : "fo-fo"
       "fo-fo" : "fo-fo"
-      "fr_be" : "fr_be"
+      "fr_be" : "fr-be"
       "fr-be" : "fr-be"
-      "fr_ca" : "fr_ca"
+      "fr_ca" : "fr-ca"
       "fr-ca" : "fr-ca"
-      "fr_ch" : "fr_ch"
+      "fr_ch" : "fr-ch"
       "fr-ch" : "fr-ch"
       "fr" : "fr"
-      "fr_fr" : "fr_fr"
+      "fr_fr" : "fr-fr"
       "fr-fr" : "fr-fr"
-      "fr_lu" : "fr_lu"
+      "fr_lu" : "fr-lu"
       "fr-lu" : "fr-lu"
-      "fr_mc" : "fr_mc"
+      "fr_mc" : "fr-mc"
       "fr-mc" : "fr-mc"
-      "gl_es" : "gl_es"
+      "gl_es" : "gl-es"
       "gl-es" : "gl-es"
       "gl" : "gl"
       "gu" : "gu"
-      "gu_in" : "gu_in"
+      "gu_in" : "gu-in"
       "gu-in" : "gu-in"
       "he" : "he"
-      "he_il" : "he_il"
+      "he_il" : "he-il"
       "he-il" : "he-il"
       "hi" : "hi"
-      "hi_in" : "hi_in"
+      "hi_in" : "hi-in"
       "hi-in" : "hi-in"
-      "hr_ba" : "hr_ba"
+      "hr_ba" : "hr-ba"
       "hr-ba" : "hr-ba"
       "hr" : "hr"
-      "hr_hr" : "hr_hr"
+      "hr_hr" : "hr-hr"
       "hr-hr" : "hr-hr"
-      "hu_hu" : "hu_hu"
+      "hu_hu" : "hu-hu"
       "hu-hu" : "hu-hu"
       "hu" : "hu"
-      "hy_am" : "hy_am"
+      "hy_am" : "hy-am"
       "hy-am" : "hy-am"
       "hy" : "hy"
-      "id_id" : "id_id"
+      "id_id" : "id-id"
       "id-id" : "id-id"
       "id" : "id"
       "is" : "is"
-      "is_is" : "is_is"
+      "is_is" : "is-is"
       "is-is" : "is-is"
-      "it_ch" : "it_ch"
+      "it_ch" : "it-ch"
       "it-ch" : "it-ch"
       "it" : "it"
-      "it_it" : "it_it"
+      "it_it" : "it-it"
       "it-it" : "it-it"
       "ja" : "ja"
-      "ja_jp" : "ja_jp"
+      "ja_jp" : "ja-jp"
       "ja-jp" : "ja-jp"
-      "ka_ge" : "ka_ge"
+      "ka_ge" : "ka-ge"
       "ka-ge" : "ka-ge"
       "ka" : "ka"
       "kk" : "kk"
-      "kk_kz" : "kk_kz"
+      "kk_kz" : "kk-kz"
       "kk-kz" : "kk-kz"
-      "kn_in" : "kn_in"
+      "kn_in" : "kn-in"
       "kn-in" : "kn-in"
       "kn" : "kn"
       "kok-in" : "kok-in"
       "kok" : "kok"
       "ko" : "ko"
-      "ko_kr" : "ko_kr"
+      "ko_kr" : "ko-kr"
       "ko-kr" : "ko-kr"
-      "ky_kg" : "ky_kg"
+      "ky_kg" : "ky-kg"
       "ky-kg" : "ky-kg"
       "ky" : "ky"
       "lt" : "lt"
-      "lt_lt" : "lt_lt"
+      "lt_lt" : "lt-lt"
       "lt-lt" : "lt-lt"
       "lv" : "lv"
-      "lv_lv" : "lv_lv"
+      "lv_lv" : "lv-lv"
       "lv-lv" : "lv-lv"
       "mi" : "mi"
-      "mi_nz" : "mi_nz"
+      "mi_nz" : "mi-nz"
       "mi-nz" : "mi-nz"
       "mk" : "mk"
-      "mk_mk" : "mk_mk"
+      "mk_mk" : "mk-mk"
       "mk-mk" : "mk-mk"
-      "mn_mn" : "mn_mn"
+      "mn_mn" : "mn-mn"
       "mn-mn" : "mn-mn"
       "mn" : "mn"
-      "mr_in" : "mr_in"
+      "mr_in" : "mr-in"
       "mr-in" : "mr-in"
       "mr" : "mr"
-      "ms_bn" : "ms_bn"
+      "ms_bn" : "ms-bn"
       "ms-bn" : "ms-bn"
       "ms" : "ms"
-      "ms_my" : "ms_my"
+      "ms_my" : "ms-my"
       "ms-my" : "ms-my"
       "mt" : "mt"
-      "mt_mt" : "mt_mt"
+      "mt_mt" : "mt-mt"
       "mt-mt" : "mt-mt"
-      "nb_no" : "nb_no"
+      "nb_no" : "nb-no"
       "nb-no" : "nb-no"
       "nb" : "nb"
-      "nl_an" : "nl_an"
+      "nl_an" : "nl-an"
       "nl-an" : "nl-an"
-      "nl_be" : "nl_be"
+      "nl_be" : "nl-be"
       "nl-be" : "nl-be"
       "nl" : "nl"
-      "nl_nl" : "nl_nl"
+      "nl_nl" : "nl-nl"
       "nl-nl" : "nl-nl"
-      "nn_no" : "nn_no"
+      "nn_no" : "nn-no"
       "nn-no" : "nn-no"
       "ns" : "ns"
-      "ns_za" : "ns_za"
+      "ns_za" : "ns-za"
       "ns-za" : "ns-za"
-      "pa_in" : "pa_in"
+      "pa_in" : "pa-in"
       "pa-in" : "pa-in"
       "pa" : "pa"
-      "pl_pl" : "pl_pl"
+      "pl_pl" : "pl-pl"
       "pl-pl" : "pl-pl"
       "pl" : "pl"
-      "ps_ar" : "ps_ar"
+      "ps_ar" : "ps-ar"
       "ps-ar" : "ps-ar"
       "ps" : "ps"
-      "pt_br" : "pt_br"
+      "pt_br" : "pt-br"
       "pt-br" : "pt-br"
       "pt" : "pt"
-      "pt_pt" : "pt_pt"
+      "pt_pt" : "pt-pt"
       "pt-pt" : "pt-pt"
-      "qu_bo" : "qu_bo"
+      "qu_bo" : "qu-bo"
       "qu-bo" : "qu-bo"
-      "qu_ec" : "qu_ec"
+      "qu_ec" : "qu-ec"
       "qu-ec" : "qu-ec"
-      "qu_pe" : "qu_pe"
+      "qu_pe" : "qu-pe"
       "qu-pe" : "qu-pe"
       "qu" : "qu"
       "ro" : "ro"
-      "ro_ro" : "ro_ro"
+      "ro_ro" : "ro-ro"
       "ro-ro" : "ro-ro"
-      "ru_ru" : "ru_ru"
+      "ru_ru" : "ru-ru"
       "ru-ru" : "ru-ru"
       "ru" : "ru"
-      "sa_in" : "sa_in"
+      "sa_in" : "sa-in"
       "sa-in" : "sa-in"
       "sa" : "sa"
-      "se_fi" : "se_fi"
+      "se_fi" : "se-fi"
       "se-fi" : "se-fi"
-      "se_fi" : "se_fi"
+      "se_fi" : "se-fi"
       "se-fi" : "se-fi"
-      "se_fi" : "se_fi"
+      "se_fi" : "se-fi"
       "se-fi" : "se-fi"
-      "se_no" : "se_no"
+      "se_no" : "se-no"
       "se-no" : "se-no"
-      "se_no" : "se_no"
+      "se_no" : "se-no"
       "se-no" : "se-no"
-      "se_no" : "se_no"
+      "se_no" : "se-no"
       "se-no" : "se-no"
       "se" : "se"
-      "se_se" : "se_se"
+      "se_se" : "se-se"
       "se-se" : "se-se"
-      "se_se" : "se_se"
+      "se_se" : "se-se"
       "se-se" : "se-se"
-      "se_se" : "se_se"
+      "se_se" : "se-se"
       "se-se" : "se-se"
-      "sk_sk" : "sk_sk"
+      "sk_sk" : "sk-sk"
       "sk-sk" : "sk-sk"
       "sk" : "sk"
-      "sl_si" : "sl_si"
+      "sl_si" : "sl-si"
       "sl-si" : "sl-si"
       "sl" : "sl"
-      "sq_al" : "sq_al"
+      "sq_al" : "sq-al"
       "sq-al" : "sq-al"
       "sq" : "sq"
-      "sr_ba" : "sr_ba"
+      "sr_ba" : "sr-ba"
       "sr-ba" : "sr-ba"
-      "sr_ba" : "sr_ba"
+      "sr_ba" : "sr-ba"
       "sr-ba" : "sr-ba"
-      "sr_sp" : "sr_sp"
+      "sr_sp" : "sr-sp"
       "sr-sp" : "sr-sp"
-      "sr_sp" : "sr_sp"
+      "sr_sp" : "sr-sp"
       "sr-sp" : "sr-sp"
-      "sv_fi" : "sv_fi"
+      "sv_fi" : "sv-fi"
       "sv-fi" : "sv-fi"
-      "sv_se" : "sv_se"
+      "sv_se" : "sv-se"
       "sv-se" : "sv-se"
       "sv" : "sv"
-      "sw_ke" : "sw_ke"
+      "sw_ke" : "sw-ke"
       "sw-ke" : "sw-ke"
       "sw" : "sw"
       "syr" : "syr"
       "syr-sy" : "syr-sy"
-      "ta_in" : "ta_in"
+      "ta_in" : "ta-in"
       "ta-in" : "ta-in"
       "ta" : "ta"
-      "te_in" : "te_in"
+      "te_in" : "te-in"
       "te-in" : "te-in"
       "te" : "te"
       "th" : "th"
-      "th_th" : "th_th"
+      "th_th" : "th-th"
       "th-th" : "th-th"
-      "tl_ph" : "tl_ph"
+      "tl_ph" : "tl-ph"
       "tl-ph" : "tl-ph"
       "tl" : "tl"
       "tn" : "tn"
-      "tn_za" : "tn_za"
+      "tn_za" : "tn-za"
       "tn-za" : "tn-za"
-      "tr_tr" : "tr_tr"
+      "tr_tr" : "tr-tr"
       "tr-tr" : "tr-tr"
       "tr" : "tr"
       "ts" : "ts"
-      "tt_ru" : "tt_ru"
+      "tt_ru" : "tt-ru"
       "tt-ru" : "tt-ru"
       "tt" : "tt"
-      "uk_ua" : "uk_ua"
+      "uk_ua" : "uk-ua"
       "uk-ua" : "uk-ua"
       "uk" : "uk"
-      "ur_pk" : "ur_pk"
+      "ur_pk" : "ur-pk"
       "ur-pk" : "ur-pk"
       "ur" : "ur"
       "uz" : "uz"
-      "uz_uz" : "uz_uz"
+      "uz_uz" : "uz-uz"
       "uz-uz" : "uz-uz"
-      "uz_uz" : "uz_uz"
+      "uz_uz" : "uz-uz"
       "uz-uz" : "uz-uz"
       "vi" : "vi"
-      "vi_vn" : "vi_vn"
+      "vi_vn" : "vi-vn"
       "vi-vn" : "vi-vn"
       "xh" : "xh"
-      "xh_za" : "xh_za"
+      "xh_za" : "xh-za"
       "xh-za" : "xh-za"
       "zh" : "zh"
-      "zh_cn" : "zh_cn"
+      "zh_cn" : "zh-cn"
       "zh-cn" : "zh-cn"
-      "zh_hk" : "zh_hk"
+      "zh_hk" : "zh-hk"
       "zh-hk" : "zh-hk"
-      "zh_mo" : "zh_mo"
+      "zh_mo" : "zh-mo"
       "zh-mo" : "zh-mo"
-      "zh_sg" : "zh_sg"
+      "zh_sg" : "zh-sg"
       "zh-sg" : "zh-sg"
-      "zh_tw" : "zh_tw"
+      "zh_tw" : "zh-tw"
       "zh-tw" : "zh-tw"
-      "zu_za" : "zu_za"
+      "zu_za" : "zu-za"
       "zu-za" : "zu-za"
       "zu" : "zu"
 # -----------------------------------------------------------------------------
