@@ -753,7 +753,7 @@ config:
       AgentNameVersion                     : '0xSCANNER-INURL_blog.inurl.com.br-K-Meleon 19.4'
       AgentNameVersionMajor                : '0xSCANNER-INURL_blog.inurl.com.br-K-Meleon 19'
       AgentLanguage                        : 'English (New Zealand)'
-      AgentLanguageCode                    : 'en_nz'
+      AgentLanguageCode                    : 'en-nz'
 
 
 - test:
