@@ -267,7 +267,7 @@ config:
       AgentNameVersion                     : 'Mobitest 1.8'
       AgentNameVersionMajor                : 'Mobitest 1'
       AgentLanguage                        : 'Dutch (Netherlands)'
-      AgentLanguageCode                    : 'nl_nl'
+      AgentLanguageCode                    : 'nl-nl'
 
 - test:
     input:
@@ -291,7 +291,7 @@ config:
       AgentNameVersion                     : 'Airmail 2.0.3'
       AgentNameVersionMajor                : 'Airmail 2'
       AgentLanguage                        : 'Japanese (Japan)'
-      AgentLanguageCode                    : 'ja_jp'
+      AgentLanguageCode                    : 'ja-jp'
 
 - test:
     input:
@@ -969,7 +969,7 @@ config:
       AgentNameVersion                     : 'Tor Browser 8.12'
       AgentNameVersionMajor                : 'Tor Browser 8'
       AgentLanguage                        : 'Dutch (Belgium)'
-      AgentLanguageCode                    : 'nl_be'
+      AgentLanguageCode                    : 'nl-be'
 
 - test:
     input:
