@@ -103,3 +103,4 @@ v1.2
 - Fix issues with Hacker detection
 - Implement DuckDuckGo app
 - Implement WeChat app
+- Cleanup and normalization of the language code
